# TEAM2_ESP32

./: .gitmodules  CMakeLists.txt  README.md
main/: CMakeLists.txt  adcread.c  adcread.h  dht.c  dht.h  main.c  myi2c.c  myi2c.h  myuart.c  myuart.h  relay.c  relay.h  wifi.c  wifi.h
main/shell/: cmd_adcread.c  cmd_dht.c  cmd_relay.c  commands.c  commands.h  shell.c
